Checkout address card: avoid border jump on select

--- a/src/scss/custom/pages/_checkout.scss
+++ b/src/scss/custom/pages/_checkout.scss
@@ -2,6 +2,7 @@ $component-name: step;
 
 .#{$component-name} {
   .address {
+    margin: 1px;
     border: 1px solid $gray-300;
 
     &,
@@ -10,6 +11,7 @@ $component-name: step;
     }
 
     &.selected {
+      margin: 0;
       border: 2px solid $primary;
     }
   }
